# zenith

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  helloworld.cpp  main
.github/common/: platformio.yml
.github/workflows/: build.yml  dash-q19.yml  dash.yml  make.yml  markdown.yml  sim-interface.yml  steering.yml
Arduino_ECU_CANtest/: BMS_Test.ino  platformio.ini
Arduino_ECU_CANtest/src/: main.cpp
CAN/tests/: Makefile  messages.cpp  test1  test1.cpp
Electric_Sim/: linAccel.py  motorInfo.py
MockECU/: platformio.ini
MockECU/src/: main.cpp
MockInverter/: InverterInterface.ino  MockInverter.ino
Q22Steering/: platformio.ini
Q22Steering/include/: errors.h  main.hpp  tft.h  tft_data.h
Q22Steering/include/display/: display.hpp  tft_data.hpp
Q22Steering/src/: errors.c  errors.cpp  main.cpp  tft.c  tft.cpp  tft_data.c  tft_data.cpp
Q22Steering/src/display/: display.cpp  displayMain.cpp  displaySplash.cpp  tft_data.cpp
Q24ECU/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Q24VCU.launch  gcc-arm-none-eabi.cmake  readme.md
Q24ECU/.VSCodeCounter/2024-03-10_13-00-07/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Q24ECU/.VSCodeCounter/2024-03-10_13-00-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Q24ECU/.VSCodeCounter/2024-03-10_13-02-39/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Q24ECU/Q24ECU/: platformio.ini
Q24ECU/Q24ECU/include/: clock.h  fifo.h  hal_adc.h  hal_gpio.h  hal_uart.h  usart2.h
Q24ECU/Q24ECU/include/hal/: fifo.h  hal_gpio.h  hal_uart.h  usart2.h
Q24ECU/Q24ECU/src/: fifo.c  main.c  syscalls.c  usart2.c
Q24ECU/Q24ECU/src/hal/: usart2.c
Q24ECU/Q24VCU_STHAL/: .gitignore  CMakeLists.txt  gcc-arm-none-eabi.cmake
Q24ECU/Q24VCU_STHAL/Core/Src/: main.c
Q24ECU/Q24VCU_STHAL/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Q24ECU/Q24VCU_V2/: .gitignore  CMakeLists.txt  gcc-arm-none-eabi.cmake
Q24ECU/Q24VCU_V2/Project/src/: main.c
Q24ECU/Q24VCU_V2/core/config/: FreeRTOSConfig.h
Q24ECU/Q24VCU_V2/core/include/: FreeRTOSConfig.h
Q24ECU/Q24VCU_V2/core/include/hal/: hal_gpio.h  hal_tim_basic.h
Q24ECU/Q24VCU_V2/core/src/: freertos.c  main.c  startup.c  syscalls.c
Q24ECU/core/config/: FreeRTOSConfig.h  nvicConfig.h  pins.h
Q24ECU/core/include/: core.h  errors.h  interrupts.h  main.h  sys_state.h  sys_tasks.h  taskHandlers.h  tasks.h
Q24ECU/core/include/drivers/: adc.h  can.h  uart.h
Q24ECU/core/include/hal/: hal_adc.h  hal_can.h  hal_clock.h  hal_dma.h  hal_flash.h  hal_gpio.h  hal_spi.h  hal_tim_basic.h  hal_uart.h  legacy_hal_adc.h
Q24ECU/core/include/interfaces/: README.md  cm200dx.h  interfaceTaskHandlers.h  interface_adc.h  interface_can.h  interface_inverter.h  interface_reporting.h  interface_spi.h  interface_sysError.h  interface_uart.h  usart.h
Q24ECU/core/include/tasks/: handler.h  interfaces.h  runner.h  taskHandlers.h  tasks.h
Q24ECU/core/src/: core.c  main.c  shutdown.c  state_error.c  state_idle.c  state_rtd.c  state_run.c  state_start.c  state_test.c  syscalls.c  taskHandlers.c  tasks.c
Q24ECU/core/src/drivers/: README.md  adc.c  can.c  uart.c
Q24ECU/core/src/interfaces/: README.md  interface_adc.c  interface_can.c  interface_inverter.c  interface_sysError.c  interface_uart.c
Q24ECU/core/src/interrupts/: README.md  TIM6.c
Q24ECU/core/src/sys_state/: controller.c  state_error.c  state_idle.c  state_rtd.c  state_start.c
Q24ECU/core/src/sys_tasks/: README.md  SBSPD.c  canRunner.c  controller.c  errorScreen.c  testTasks.c
Q24ECU/core/src/system/: README.md  shutdown.c  startup.c  syscalls.c
Q24ECU/core/src/tasks/: README.md  SBSPD.c  canRunner.c  canRunner.txt  errorScreen.c  runner.c  taskHandlers.c  taskHandlers.txt  testTasks.c  throttleTasks.c  uart2_reciever.c
Q24ECU/docs/: FreeRTOS.md  clangd_fixes_unknown.md  structure.md
Reference/EVE_Test_Arduino_PlatformIO/: readme.md
Reference/EVE_Test_Arduino_PlatformIO/src/: EVE_Test.cpp
Reference/steering-display/: .gitignore  platformio.ini
Reference/steering-display/include/: cal.hpp  can.hpp
Reference/steering-display/src/: cal.cpp  main.cpp  tft.h  tft_data.h
assets/: README.md
cal/: README.md
cal-rx_tx-demo/FakeECU/: platformio.ini
cal-rx_tx-demo/FakeECU/include/: encoder.hpp
cal-rx_tx-demo/FakeECU/src/: encoder.cpp  main.cpp
cal-rx_tx-demo/Reciever/: platformio.ini
cal-rx_tx-demo/Reciever/src/: main.cpp
cal/CAL2/include/: cal.hpp
cal/CAL2/src/: cal_ecu.cpp
cal/CAL3/: README.md
cal/CAL3/include/: cal.hpp
cal/CAL3/src/: cal.cpp  cal_ecu.cpp  cal_pdm.cpp  main.cpp
cal/CAL_ECU/: README.md
cal/CAL_ECU/include/: cal.hpp
cal/CAL_ECU/src/: cal_ecu.cpp  main.cpp
cal/cal/: .gitignore  library.json
cal/decoder/: README.md  library.json
cal/include/: cal.h  cal.hpp
cal/src/: cal.cpp  cal_ecu.cpp  main.cpp
cal/st-f4can/: README.md  library.json
canFirmware/: can_Firmware_Q23.ino  todo.txt
canprobe/: platformio.ini
canprobe/src/: main.cpp
ci/: README.md  build.sh
dyno-can/arduino-can-monitor/: platformio.ini
legacy/: README.md
remote_dashboard/backend/: .eslintrc.json  .prettierrc  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sim-interface/: makefile  sim-interface.sln  sim-interface.vcxproj  sim-interface.vcxproj.filters
sim-interface/src/: DataStream.cpp
steering/: .gitignore  README.md  platformio.ini
steering/include/: main.hpp  screens.h  steering_io.h  tft.h  tft_data.h
steering/src/: main.cpp  screens.c  tft.c  tft_data.c
steering/test/: README.md  test_main.cpp
steering_electron/: .gitignore  main.js  package-lock.json  package.json
templates/makefile-c++/: README.md  makefile
templates/makefile-cpp/: .gitignore  README.md  makefile
templates/nucleo-f446re/: platformio.ini
templates/steering-display/: platformio.ini
ugfx-teensy/: platformio.ini  readme.md
ugfx-teensy/src/: ugfx_teensy.cpp  ugfx_teensy.ino
(+91 files in other folders)
